[workspace]
members = ["scooter", "scooter-core", "xtask"]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
manual_string_new = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
redundant_else = "allow"
if_not_else = "allow"
needless_raw_string_hashes = "allow"
bool_assert_comparison = "allow"

[workspace.lints.rust]
rust_2018_idioms = "warn"
# rust_2024_compatibility = "warn" # TODO: uncomment

[profile.release]
lto = true
