[package]
name = "scooter-core"
version = "0.3.0"
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Core find-and-replace functionality"
readme = "README.md"
homepage = "https://github.com/thomasschafer/scooter/tree/main/scooter-core"
repository = "https://github.com/thomasschafer/scooter/tree/main/scooter-core"
keywords = ["find", "search", "replace"]

[lib]
name = "scooter_core"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
steel = ["dep:steel-core", "dep:steel-derive"]
term = ["crossterm"]

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
content_inspector = "0.2.4"
crossterm = { version = "0.28.1", optional = true }
etcetera = "0.11.0"
fancy-regex = "0.15.0"
ignore = "0.4.25"
log = "0.4.29"
rayon = "1.11.0"
regex = "1.12.2"
serde = "1.0.228"
similar = "2.7.0"
simple-log = "2.4.0"
steel-core = { version = "0.7.0", features = [
  "dylibs",
  "sync",
], optional = true }
steel-derive = { version = "0.6.0", optional = true }
syntect = "5.3.0"
tempfile = "3.23.0"
termini = "1.0.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
unicode-width = "0.2.0"

[dev-dependencies]
indoc = "2.0.7"
insta = "1.45.0"
rand = "0.9.2"
serial_test = "3.2.0"
