[package]
name = "scooter-core"
version = "0.3.1"
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Core find-and-replace functionality"
readme = "README.md"
homepage = "https://github.com/thomasschafer/scooter/tree/main/scooter-core"
repository = "https://github.com/thomasschafer/scooter/tree/main/scooter-core"
keywords = ["find", "search", "replace"]

[lib]
name = "scooter_core"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
steel = ["dep:steel-core", "dep:steel-derive"]
term = ["crossterm"]

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
content_inspector = "0.2.4"
crossterm = { version = "0.29.0", optional = true }
etcetera = "0.11.0"
fancy-regex = "0.17.0"
ignore = "0.4.25"
log = "0.4.29"
rayon = "1.11.0"
regex = "1.12.3"
serde = "1.0.228"
similar = "2.7.0"
simple-log = "2.4.0"
steel-core = { version = "0.7.0", features = [
  "dylibs",
  "sync",
], optional = true }
steel-derive = { version = "0.6.0", optional = true }
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-onig"] }
tempfile = "3.24.0"
termini = "1.0.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
unicode-width = "0.2.0"

[dev-dependencies]
indoc = "2.0.7"
insta = "1.46.3"
rand = "0.10.0"
serial_test = "3.3.1"
