[package]
name = "scooter"
version = "0.8.2"
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Interactive find and replace in the terminal"
readme = "../README.md"
homepage = "https://github.com/thomasschafer/scooter"
repository = "https://github.com/thomasschafer/scooter"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
scooter-core = { version = "0.2.0", path = "../scooter-core" }
clap = { version = "4.5.50", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
etcetera = "0.10.0"
frep-core = "0.1.7"
futures = "0.3.31"
ignore = "0.4.23"
itertools = "0.14.0"
log = "0.4.28"
lru = "0.16.2"
ratatui = "0.29.0"
regex = "1.12.2"
serde = "1.0.228"
simple-log = "2.4.0"
syntect = "5.3.0"
termini = "1.0.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.28", features = [
  "event-stream",
  "use-dev-tty",
  "libc",
] }

[dev-dependencies]
indoc = "2.0.7"
insta = { version = "1.43.2", features = ["filters"] }
rand = "0.9.2"
serial_test = "3.2.0"
tempfile = "3.23.0"

[lib]
name = "scooter"
path = "src/lib.rs"

[lints]
workspace = true
