[package]
name = "scooter"
version = "0.8.5"
edition.workspace = true
authors = ["thomasschafer97@gmail.com"]
license = "MIT"
description = "Interactive find and replace in the terminal"
readme = "../README.md"
homepage = "https://github.com/thomasschafer/scooter"
repository = "https://github.com/thomasschafer/scooter"
keywords = ["cli", "find", "search", "replace"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
scooter-core = { version = "0.3.2", path = "../scooter-core", features = [
  "term",
] }
clap = { version = "4.5.58", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
etcetera = "0.11.0"
futures = "0.3.32"
ignore = "0.4.25"
itertools = "0.14.0"
log = "0.4.29"
lru = "0.16.3"
paste = "1.0"
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
regex = "1.12.3"
simple-log = "2.4.0"
two-face = { version = "0.5.1", default-features = false, features = ["syntect-default-onig"] }
tokio = { version = "1.49.0", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.29.0", features = [
  "event-stream",
  "use-dev-tty",
  "libc",
] }

[dev-dependencies]
indoc = "2.0.7"
insta = { version = "1.46.3", features = ["filters"] }
rand = "0.10.0"
serial_test = "3.3.1"
tempfile = "3.24.0"
two-face = { version = "0.5.1", features = ["syntect-default-onig"] }

[lib]
name = "scooter"
path = "src/lib.rs"

[lints]
workspace = true
